fix: 更新package.json，修正项目描述和完整依赖

--- a/package.json
+++ b/package.json
@@ -1,60 +1,67 @@
 {
-  "name": "blockchain-data-dapp",
+  "name": "blockchain-redpacket-system",
   "version": "1.0.0",
-  "description": "区块链数据上链系统 - React + Webpack架构",
-  "main": "src/index.js",
+  "description": "🎁 完整的区块链红包系统 - 智能合约 + 子图索引 + Web3前端",
+  "main": "src/app/page.tsx",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "frontend:dev": "cd src/frontend && npm run dev",
-    "deploy": "npm run build && gh-pages -d dist"
+    "lint": "next lint",
+    "contracts:compile": "hardhat compile",
+    "contracts:test": "hardhat test",
+    "contracts:deploy": "hardhat run scripts/deploy.js",
+    "subgraph:codegen": "cd subgraph && graph codegen",
+    "subgraph:build": "cd subgraph && graph build",
+    "subgraph:deploy": "cd subgraph && graph deploy",
+    "frontend:dev": "npm run dev",
+    "full:setup": "npm install && npm run contracts:compile && npm run subgraph:codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0",
-    "axios": "^1.5.0",
-    "bignumber.js": "^9.1.1",
-    "clsx": "^2.0.0",
-    "ethers": "^6.7.1",
-    "graphql": "^16.8.0",
-    "lucide-react": "^0.263.1",
+    "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "wagmi": "^2.5.7",
+    "@wagmi/core": "^2.6.5",
+    "@tanstack/react-query": "^5.28.6",
+    "viem": "^2.7.15",
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "ethers": "^6.10.0",
+    "@apollo/client": "^3.9.0",
+    "graphql": "^16.8.0",
+    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.263.1",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "wagmi": "^2.5.7",
-    "@babel/core": "^7.22.0",
-    "@babel/preset-env": "^7.22.0",
-    "@babel/preset-react": "^7.22.0",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^9.1.0",
-    "crypto-browserify": "^3.12.1",
-    "css-loader": "^6.8.0",
-    "dotenv-webpack": "^8.0.1",
-    "gh-pages": "^6.0.0",
     "hardhat": "^3.0.4",
-    "html-webpack-plugin": "^5.5.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "postcss-loader": "^7.3.0",
-    "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.0",
     "tailwindcss": "^3.3.0",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-dev-server": "^4.15.0"
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0"
   },
   "keywords": [
     "blockchain",
     "ethereum",
-    "react",
+    "red-packet",
     "web3",
+    "smart-contracts",
     "the-graph",
-    "smart-contracts"
+    "nextjs",
+    "defi",
+    "dapp"
   ],
   "author": "limuran",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  }
 }
