--- a/package.json
+++ b/package.json
@@ -18,34 +18,38 @@
     "full:setup": "npm install && npm run contracts:compile && npm run subgraph:codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.0",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/core": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@tanstack/react-query": "^5.28.6",
+    "@wagmi/core": "^2.6.5",
+    "D": "^1.0.0",
+    "clsx": "^2.1.0",
+    "ethers": "^6.10.0",
+    "graphql": "^16.8.0",
+    "lucide-react": "^0.263.1",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "^2.5.7",
-    "@wagmi/core": "^2.6.5",
-    "@tanstack/react-query": "^5.28.6",
-    "viem": "^2.7.15",
-    "@rainbow-me/rainbowkit": "^2.0.0",
-    "ethers": "^6.10.0",
-    "@apollo/client": "^3.9.0",
-    "graphql": "^16.8.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.263.1",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "viem": "^2.7.15",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
-    "hardhat": "^3.0.4",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0",
+    "hardhat": "^3.0.4",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "blockchain",
