fix: 清理package.json并添加必要的浏览器polyfill依赖

--- a/package.json
+++ b/package.json
@@ -9,51 +9,56 @@
     "start": "next start",
     "lint": "next lint",
     "contracts:compile": "hardhat compile",
-    "contracts:test": "hardhat test",
+    "contracts:test": "hardhat test", 
     "contracts:deploy": "hardhat run scripts/deploy.js",
     "subgraph:codegen": "cd subgraph && graph codegen",
     "subgraph:build": "cd subgraph && graph build",
     "subgraph:deploy": "cd subgraph && graph deploy",
-    "frontend:dev": "npm run dev",
-    "full:setup": "npm install && npm run contracts:compile && npm run subgraph:codegen"
+    "full:setup": "npm install && npm run contracts:compile"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.0",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/core": "^7.22.0",
-    "@babel/preset-react": "^7.22.0",
-    "@rainbow-me/rainbowkit": "^2.0.0",
-    "@tanstack/react-query": "^5.28.6",
-    "@wagmi/core": "^2.6.5",
-    "D": "^1.0.0",
-    "clsx": "^2.1.0",
-    "ethers": "^6.10.0",
-    "graphql": "^16.8.0",
-    "lucide-react": "^0.263.1",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "tailwind-merge": "^2.2.0",
+    "wagmi": "^2.5.7",
+    "@wagmi/core": "^2.6.5",
+    "@tanstack/react-query": "^5.28.6",
     "viem": "^2.7.15",
-    "wagmi": "^2.5.7"
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "ethers": "^6.10.0",
+    "@apollo/client": "^3.9.0",
+    "graphql": "^16.8.0",
+    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.263.1",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
+    "buffer": "^6.0.3",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
+    "crypto-browserify": "^3.12.1",
+    "assert": "^2.0.0",
+    "stream-http": "^3.2.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "url": "^0.11.3",
+    "browserify-zlib": "^0.2.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "14.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "hardhat": "^3.0.4",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0"
   },
   "keywords": [
     "blockchain",
-    "ethereum",
+    "ethereum", 
     "red-packet",
     "web3",
     "smart-contracts",
