--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.28.6",
     "@wagmi/core": "^2.6.5",
-    "assert": "^2.0.0",
+    "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "clsx": "^2.1.0",
+    "core-js": "^3.45.1",
     "crypto-browserify": "^3.12.1",
     "ethers": "^6.10.0",
     "graphql": "^16.8.0",
@@ -35,13 +36,14 @@
     "lucide-react": "^0.263.1",
     "next": "14.0.0",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.2.0",
-    "url": "^0.11.3",
+    "url": "^0.11.4",
     "util": "^0.12.5",
     "viem": "^2.7.15",
     "wagmi": "^2.5.7"
