--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "14.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "pino-pretty": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
