--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "tailwind-merge": "^2.2.0",
     "url": "^0.11.4",
     "util": "^0.12.5",
-    "viem": "^2.7.15",
+    "viem": "2.7.15",
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
